@@ -31,6 +31,7 @@ import com.dabomstew.pkrandom.constants.Moves;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toCollection;
 
@@ -45,28 +46,28 @@ public class MoveSynergy {
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number).toList());
+                        .map(mv -> mv.number).collect(Collectors.toList()));
                 break;
             case Abilities.drought:
             case Abilities.desolateLand:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number).toList());
+                        .map(mv -> mv.number).collect(Collectors.toList()));
                 break;
             case Abilities.refrigerate:
                 if (pkType1 == Type.ICE || pkType2 == Type.ICE) {
                     synergisticMoves.addAll(moveList
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
-                            .map(mv -> mv.number).toList());
+                            .map(mv -> mv.number).collect(Collectors.toList()));
                 }
                 break;
             case Abilities.galeWings:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FLYING)
-                        .map(mv -> mv.number).toList());
+                        .map(mv -> mv.number).collect(Collectors.toList()));
                 break;
             case Abilities.pixilate:
                 if (pkType1 == Type.FAIRY || pkType2 == Type.FAIRY) {
@@ -74,7 +75,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .toList());
+                            .collect(Collectors.toList()));
                 }
                 break;
             case Abilities.aerilate:
@@ -83,7 +84,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .toList());
+                            .collect(Collectors.toList()));
                 }
                 break;
             case Abilities.darkAura:
@@ -91,14 +92,14 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.DARK && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.fairyAura:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FAIRY && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.steelworker:
             case Abilities.steelySpirit:
@@ -106,7 +107,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.STEEL && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.galvanize:
                 if (pkType1 == Type.ELECTRIC || pkType2 == Type.ELECTRIC) {
@@ -114,7 +115,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .toList());
+                            .collect(Collectors.toList()));
                 }
                 break;
             case Abilities.electricSurge:
@@ -123,28 +124,28 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.ELECTRIC && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.psychicSurge:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.PSYCHIC && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.grassySurge:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.GRASS && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.dragonsMaw:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
         }
 
@@ -159,21 +160,27 @@ public class MoveSynergy {
         List<Integer> antiSynergisticMoves = new ArrayList<>();
 
         switch (ability) {
-            case Abilities.drizzle -> antiSynergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
-                    .map(mv -> mv.number)
-                    .toList());
-            case Abilities.drought -> antiSynergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
-                    .map(mv -> mv.number)
-                    .toList());
-            case Abilities.mistySurge -> antiSynergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
-                    .map(mv -> mv.number)
-                    .toList());
+            case Abilities.drizzle:
+                antiSynergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
+            case Abilities.drought:
+                antiSynergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
+            case Abilities.mistySurge:
+                antiSynergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
         }
 
         return moveList
@@ -223,7 +230,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.hitratio > 0 && mv.hitratio <= 80)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.ownTempo:
             case Abilities.tangledFeet:
@@ -251,7 +258,7 @@ public class MoveSynergy {
                                 (mv.statusMoveType == StatusMoveType.DAMAGE && mv.statusPercentChance < 100) ||
                         mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.swiftSwim:
             case Abilities.rainDish:
@@ -286,12 +293,12 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.hasSpecificStatChange(StatChangeType.ACCURACY, true))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category == MoveCategory.PHYSICAL && mv.hitratio == perfectAccuracy)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.guts:
                 synergisticMoves.add(Moves.facade);
@@ -301,7 +308,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.drought:
             case Abilities.desolateLand:
@@ -322,7 +329,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.isPunchMove)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.snowCloak:
             case Abilities.iceBody:
@@ -340,7 +347,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.acupressure);
                 break;
             case Abilities.adaptability:
@@ -348,14 +355,14 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS && (mv.type == pkType1 || mv.type == pkType2))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.skillLink:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.hitCount >= 3)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.sniper:
                 synergisticMoves.addAll(moveList
@@ -363,14 +370,14 @@ public class MoveSynergy {
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED ||
                                 mv.criticalChance == CriticalChance.GUARANTEED)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.magicGuard:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.mindBlown);
                 break;
             case Abilities.stall:
@@ -382,28 +389,28 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.analytic:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.power > 0 && mv.priority < 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.noGuard:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.hitratio > 0 && mv.hitratio <= 70)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.technician:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> (mv.power >= 40 && mv.power <= 60) || mv.hitCount > 1)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.slowStart:
                 synergisticMoves.add(Moves.transform);
@@ -428,7 +435,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.jumpKick);
                 synergisticMoves.add(Moves.highJumpKick);
                 break;
@@ -437,7 +444,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusType == StatusType.SLEEP)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.sheerForce:
                 synergisticMoves.addAll(moveList
@@ -448,7 +455,7 @@ public class MoveSynergy {
                                 mv.statusMoveType == StatusMoveType.DAMAGE ||
                                 mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.contrary:
                 synergisticMoves.addAll(moveList
@@ -456,7 +463,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statChangeMoveType == StatChangeMoveType.DAMAGE_USER &&
                                 mv.statChanges[0].stages < 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.heavyMetal:
                 synergisticMoves.add(Moves.heatCrash);
@@ -472,7 +479,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.makesContact)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.regenerator:
                 synergisticMoves.add(Moves.uTurn);
@@ -484,7 +491,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.destinyBond);
                 synergisticMoves.add(Moves.encore);
                 synergisticMoves.add(Moves.reflect);
@@ -523,7 +530,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.banefulBunker);
                 break;
             case Abilities.liquidVoice:
@@ -532,7 +539,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.isSoundMove && mv.power > 0)
                             .map(mv -> mv.number)
-                            .toList());
+                            .collect(Collectors.toList()));
                 }
                 break;
             case Abilities.triage:
@@ -540,7 +547,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.absorbPercent > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.surgeSurfer:
                 synergisticMoves.add(Moves.electricTerrain);
@@ -551,7 +558,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.category == MoveCategory.STATUS &&
                                 (mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
         }
 
@@ -572,7 +579,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.type == Type.FIRE &&
                                 mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 // fallthrough
             case Abilities.drizzle:
             case Abilities.sandStream:
@@ -594,7 +601,7 @@ public class MoveSynergy {
                                 mv.statChanges[0].type == StatChangeType.SPEED &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 antiSynergisticMoves.add(Moves.psychUp);
                 antiSynergisticMoves.add(Moves.haze);
                 break;
@@ -604,7 +611,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.type == Type.WATER &&
                                 mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 // fallthrough
             case Abilities.drought:
                 antiSynergisticMoves.add(Moves.thunder);
@@ -623,7 +630,7 @@ public class MoveSynergy {
                                 mv.hasSpecificStatChange(StatChangeType.EVASION, true) ||
                                 mv.hasSpecificStatChange(StatChangeType.EVASION, false))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.damp:
                 antiSynergisticMoves.add(Moves.selfDestruct);
@@ -652,7 +659,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages < 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.contrary:
                 antiSynergisticMoves.addAll(moveList
@@ -661,7 +668,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 antiSynergisticMoves.add(Moves.shellSmash);
                 break;
             case Abilities.lightMetal:
@@ -673,7 +680,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 antiSynergisticMoves.add(Moves.rest);
                 break;
             case Abilities.psychicSurge:
@@ -681,7 +688,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.priority > 0))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Abilities.mistySurge:
                 antiSynergisticMoves.addAll(moveList
@@ -694,7 +701,7 @@ public class MoveSynergy {
                                 mv.statusType == StatusType.POISON ||
                                 mv.statusType == StatusType.TOXIC_POISON)))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 antiSynergisticMoves.add(Moves.rest);
                 break;
             case Abilities.grassySurge:
@@ -802,7 +809,7 @@ public class MoveSynergy {
                     .stream()
                     .filter(mv -> mv.flinchPercentChance > 0 && mv.priority == 0)
                     .map(mv -> mv.number)
-                    .toList());
+                    .collect(Collectors.toList()));
         }
 
         if (mv1.flinchPercentChance > 0 && mv1.priority == 0) {
@@ -814,7 +821,7 @@ public class MoveSynergy {
                                     mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                     mv.hasSpecificStatChange(StatChangeType.SPEED, true)))
                     .map(mv -> mv.number)
-                    .toList());
+                    .collect(Collectors.toList()));
         }
 
         if (mv1.statChanges[0].stages >= 2 || mv1.statChanges[1].type != StatChangeType.NONE) {
@@ -842,7 +849,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.isTrapMove))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 // fallthrough
             case Moves.poisonPowder:
             case Moves.poisonGas:
@@ -857,7 +864,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.category == MoveCategory.STATUS &&
                                 (mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.protect:
             case Moves.detect:
@@ -871,7 +878,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statChanges[0].stages >= 2 || mv.statChanges[1].type != StatChangeType.NONE)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.shellSmash);
                 break;
             case Moves.willOWisp:
@@ -883,7 +890,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.hitratio <= 50))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.sunnyDay:
                 synergisticMoves.add(Moves.solarBlade);
@@ -900,7 +907,7 @@ public class MoveSynergy {
                                 (mv.hasSpecificStatChange(StatChangeType.ATTACK, false) ||
                                         mv.hasSpecificStatChange(StatChangeType.SPECIAL_ATTACK, false)))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.endure:
                 synergisticMoves.add(Moves.reversal);
@@ -912,7 +919,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS && mv.priority > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.thunderWave:
             case Moves.glare:
@@ -921,12 +928,12 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category == MoveCategory.STATUS && mv.statusType == StatusType.CONFUSION)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.hex);
                 break;
             case Moves.hail:
@@ -947,7 +954,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.isTrapMove))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.spikes:
             case Moves.stealthRock:
@@ -965,7 +972,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.focusPunch:
             case Moves.dreamEater:
@@ -975,7 +982,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE &&
                                 mv.statusType == StatusType.SLEEP)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 break;
             case Moves.torment:
                 synergisticMoves.add(Moves.encore);
@@ -989,7 +996,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE &&
                                 mv.statusType != StatusType.CONFUSION)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.banefulBunker);
                 break;
             case Moves.storedPower:
@@ -997,7 +1004,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statChanges[0].stages > 1 || mv.statChanges[1].type != StatChangeType.NONE)
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
                 synergisticMoves.add(Moves.acupressure);
                 synergisticMoves.add(Moves.shellSmash);
                 break;
@@ -1033,27 +1040,32 @@ public class MoveSynergy {
                                 .stream()
                                 .filter(entry -> entry.getValue() == Effectiveness.DOUBLE)
                                 .map(Map.Entry::getKey)
-                                .toList();
+                                .collect(Collectors.toList());
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS &&
                                 superEffectiveAgainstNVE.contains(mv.type))
                         .map(mv -> mv.number)
-                        .toList());
+                        .collect(Collectors.toList()));
             }
         }
 
         switch (mv1.number) {
-            case Moves.swordsDance -> synergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> mv.category == MoveCategory.PHYSICAL)
-                    .map(mv -> mv.number)
-                    .toList());
-            case Moves.nastyPlot, Moves.tailGlow -> synergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> mv.category == MoveCategory.SPECIAL)
-                    .map(mv -> mv.number)
-                    .toList());
+            case Moves.swordsDance:
+                synergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> mv.category == MoveCategory.PHYSICAL)
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
+            case Moves.nastyPlot:
+            case Moves.tailGlow:
+                synergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> mv.category == MoveCategory.SPECIAL)
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
         }
 
         return moveList
@@ -1074,37 +1086,47 @@ public class MoveSynergy {
                             (mv.statusType == mv1.statusType ||
                                     (mv1.statusType != StatusType.CONFUSION && mv.statusType != StatusType.CONFUSION))))
                     .map(mv -> mv.number)
-                    .toList());
+                    .collect(Collectors.toList()));
         }
 
         switch (mv1.number) {
-            case Moves.protect -> {
+            case Moves.protect: {
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
                 antiSynergisticMoves.add(Moves.kingsShield);
+                break;
             }
-            case Moves.detect -> {
+            case Moves.detect: {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
                 antiSynergisticMoves.add(Moves.kingsShield);
+                break;
             }
-            case Moves.kingsShield -> {
+            case Moves.kingsShield: {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
+                break;
             }
-            case Moves.banefulBunker -> {
+            case Moves.banefulBunker: {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.kingsShield);
+                break;
             }
-            case Moves.returnTheMoveNotTheKeyword -> antiSynergisticMoves.add(Moves.frustration);
-            case Moves.frustration -> antiSynergisticMoves.add(Moves.returnTheMoveNotTheKeyword);
-            case Moves.leechSeed, Moves.perishSong -> {
+            case Moves.returnTheMoveNotTheKeyword:
+                antiSynergisticMoves.add(Moves.frustration);
+                break;
+            case Moves.frustration:
+                antiSynergisticMoves.add(Moves.returnTheMoveNotTheKeyword);
+                break;
+            case Moves.leechSeed:
+            case Moves.perishSong: {
                 antiSynergisticMoves.add(Moves.whirlwind);
                 antiSynergisticMoves.add(Moves.roar);
                 antiSynergisticMoves.add(Moves.circleThrow);
                 antiSynergisticMoves.add(Moves.dragonTail);
+                break;
             }
         }
 
@@ -1139,20 +1161,24 @@ public class MoveSynergy {
                     .stream()
                     .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == mv1.type))
                     .map(mv -> mv.number)
-                    .toList());
+                    .collect(Collectors.toList()));
         }
 
         switch (mv1.number) {
-            case Moves.waterSport -> antiSynergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.FIRE))
-                    .map(mv -> mv.number)
-                    .toList());
-            case Moves.mudSport -> antiSynergisticMoves.addAll(moveList
-                    .stream()
-                    .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.ELECTRIC))
-                    .map(mv -> mv.number)
-                    .toList());
+            case Moves.waterSport:
+                antiSynergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.FIRE))
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
+            case Moves.mudSport:
+                antiSynergisticMoves.addAll(moveList
+                        .stream()
+                        .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.ELECTRIC))
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
         }
 
         return moveList
@@ -1165,12 +1191,18 @@ public class MoveSynergy {
     public static List<Move> requiresOtherMove(Move mv1, List<Move> moveList) {
         List<Integer> requiresMove = new ArrayList<>();
         switch (mv1.number) {
-            case Moves.spitUp, Moves.swallow -> requiresMove.add(Moves.stockpile);
-            case Moves.dreamEater, Moves.nightmare -> requiresMove.addAll(moveList
-                    .stream()
-                    .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
-                    .map(mv -> mv.number)
-                    .toList());
+            case Moves.spitUp:
+            case Moves.swallow:
+                requiresMove.add(Moves.stockpile);
+                break;
+            case Moves.dreamEater:
+            case Moves.nightmare:
+                requiresMove.addAll(moveList
+                        .stream()
+                        .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
+                        .map(mv -> mv.number)
+                        .collect(Collectors.toList()));
+                break;
         }
         return moveList
                 .stream()
