@@ -41,6 +41,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * {@link RomHandler} for Red, Blue, Yellow, Green.
@@ -934,7 +935,7 @@ public class Gen1RomHandler extends AbstractGBCRomHandler {
     public List<EncounterArea> getSortedEncounters(boolean useTimeOfDay) {
         return getEncounters(useTimeOfDay).stream()
                 .sorted(Comparator.comparingInt(a -> Gen1Constants.locationTagsTraverseOrder.indexOf(a.getLocationTag())))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -1721,7 +1722,7 @@ public class Gen1RomHandler extends AbstractGBCRomHandler {
                     EvolutionType type = Gen1Constants.evolutionTypeFromIndex(method);
                     int otherPoke = pokeRBYToNumTable[rom[pointer + 2 + (type == EvolutionType.STONE ? 1 : 0)] & 0xFF];
                     int extraInfo = rom[pointer + 1] & 0xFF;
-                    Evolution evo = new Evolution(pkmn, pokes[otherPoke], true, type, extraInfo);
+                    Evolution evo = new Evolution(pkmn, pokes[otherPoke], type, extraInfo);
                     if (!pkmn.getEvolutionsFrom().contains(evo)) {
                         pkmn.getEvolutionsFrom().add(evo);
                         if (pokes[otherPoke] != null) {
@@ -1729,12 +1730,6 @@ public class Gen1RomHandler extends AbstractGBCRomHandler {
                         }
                     }
                     pointer += (type == EvolutionType.STONE ? 4 : 3);
-                }
-                // split evos don't carry stats
-                if (pkmn.getEvolutionsFrom().size() > 1) {
-                    for (Evolution e : pkmn.getEvolutionsFrom()) {
-                        e.setCarryStats(false);
-                    }
                 }
             }
         }
