@@ -1446,7 +1446,7 @@ public class Gen3RomHandler extends AbstractGBRomHandler {
                 Gen3Constants.locationTagsTraverseOrderFRLG : Gen3Constants.locationTagsTraverseOrderRSE;
         return getEncounters(useTimeOfDay).stream()
                 .sorted(Comparator.comparingInt(a -> locationTagsTraverseOrder.indexOf(a.getLocationTag())))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -2828,19 +2828,10 @@ public class Gen3RomHandler extends AbstractGBRomHandler {
                         && evolvingTo <= numInternalPokes) {
                     int extraInfo = readWord(evoOffset + j * 8 + 2);
                     EvolutionType et = Gen3Constants.evolutionTypeFromIndex(method);
-                    Evolution evo = new Evolution(pk, pokesInternal[evolvingTo], true, et, extraInfo);
+                    Evolution evo = new Evolution(pk, pokesInternal[evolvingTo], et, extraInfo);
                     if (!pk.getEvolutionsFrom().contains(evo)) {
                         pk.getEvolutionsFrom().add(evo);
                         pokesInternal[evolvingTo].getEvolutionsTo().add(evo);
-                    }
-                }
-            }
-            // Split evos shouldn't carry stats unless the evo is Nincada's
-            // In that case, we should have Ninjask carry stats
-            if (pk.getEvolutionsFrom().size() > 1) {
-                for (Evolution e : pk.getEvolutionsFrom()) {
-                    if (e.getType() != EvolutionType.LEVEL_CREATE_EXTRA) {
-                        e.setCarryStats(false);
                     }
                 }
             }
@@ -3006,8 +2997,8 @@ public class Gen3RomHandler extends AbstractGBRomHandler {
     @Override
     public Map<Integer, Shop> getShopItems() {
         List<String> shopNames = Gen3Constants.getShopNames(romEntry.getRomType());
-        List<Integer> mainGameShops = Arrays.stream(romEntry.getArrayValue("MainGameShops")).boxed().toList();
-        List<Integer> skipShops = Arrays.stream(romEntry.getArrayValue("SkipShops")).boxed().toList();
+        List<Integer> mainGameShops = Arrays.stream(romEntry.getArrayValue("MainGameShops")).boxed().collect(Collectors.toList());
+        List<Integer> skipShops = Arrays.stream(romEntry.getArrayValue("SkipShops")).boxed().collect(Collectors.toList());
         Map<Integer, Shop> shopItemsMap = new TreeMap<>();
         int[] shopItemOffsets = romEntry.getArrayValue("ShopItemOffsets");
         for (int i = 0; i < shopItemOffsets.length; i++) {
